# adlib

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  com.adlib.VoiceRecorder.desktop
docs/: DEVELOPMENT.md  FUTURE.md  architecture.md  development.md  future.md  live_transcription.md  ui-waveform.md
scripts/: parse_debug_log.py  sample.log.txt
specifications/: ai_model_pipeline.md  audio_pipeline.md  dependencies.md  overview.md  requireddetails.md  storage_and_background.md  ui_and_navigation.md
src/: app.rs  assets.rs  cli.rs  main.rs  models.rs  settings.rs  tokio_runtime.rs
src/audio/: capture.rs  mod.rs  playback.rs  recorder.rs
src/state/: app_state.rs  database.rs  mod.rs
src/transcription/: mod.rs
src/whisper/: manager.rs  mod.rs
