[package]
name = "adlib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Linux desktop voice recorder and transcription application"
authors = ["Adlib Contributors"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
gpui = "0.2.2"
gpui-component = "0.5.0"
hf-hub = "0.4.3"
hound = "3.5.1"
rust-embed = "8.5"
pipewire = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full", "rt-multi-thread"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
whisper-rs = "0.15.1"
dconf_rs = "0.3.0"
clap = { version = "4.5.53", features = ["derive"] }
log = "0.4.29"
env_logger = "0.11.8"
